<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/menu_temporary_chat"
        android:icon="@drawable/ic_chat"
        android:title="Temp chats" />
    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />
    <item
        android:id="@+id/menu_community"
        android:icon="@drawable/ic_community"
        android:title="Communities" />
    <item
        android:id="@+id/menu_group"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_group" />
</menu>