<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/input_box"
    android:layout_margin="10dp">

    <include layout="@layout/profile_ic_view"
        android:layout_margin="10dp"
        android:layout_height="52dp"
        android:layout_width="52dp"
        android:layout_gravity="center">

    </include>

    <TextView
        android:id="@+id/emptyChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No chats yet. Start a conversation!"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_username"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/lastMsgTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp">

            </TextView>
        </RelativeLayout>

        <TextView
            android:id="@+id/lastMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_number">

        </TextView>

    </LinearLayout>

</LinearLayout>